--- a/src/App.css
+++ b/src/App.css
@@ -6,13 +6,17 @@
 }
 
 body {
-  background-color: rgb(16, 57, 73);
+
+  background-image: linear-gradient(to bottom, rgb(114, 17, 62), rgb(8, 8, 8));
+}
+
+.main {
+  height: 100vh;
 }
 
 header {
   display: flex;
   width: 100%;
-  background-image: linear-gradient(to right, red, yellow);
   margin-bottom: 30px;
 
 
@@ -51,6 +55,8 @@ button {
   flex-grow: 1;
   margin-right: 20px;
   flex-wrap: wrap;
+  background-color: rgb(9, 12, 9);
+  color: antiquewhite;
 }
 
 @media only screen and (max-width: 600px) {
@@ -59,13 +65,7 @@ button {
     padding: 35px;
   }
 
-  input,
-  button {
 
-    width: 200px;
-    margin: 10px;
-
-  }
 
 }
 
@@ -132,5 +132,14 @@ button {
 
 .downloadBtn {
   margin: 25px;
-  background-color: #4CAF50;
+  padding: 15px;
+  background-color: rgb(9, 12, 9);
+  color: antiquewhite;
+
+}
+
+button:hover {
+
+  border: solid 5px rgb(155, 71, 110);
+
 }
